--- a/css/style.css
+++ b/css/style.css
@@ -31,3 +31,14 @@ button{
     background-color: blue;
     margin: 10px 0px;
 }
+
+.heart{
+    width: 100px;
+    height: 100px;
+}
+
+.black{
+    width: 50px;
+    height: 50px;
+    background-color: black;
+}
